--- a/src/x/pkg0/Menu.form
+++ b/src/x/pkg0/Menu.form
@@ -50,7 +50,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                   <Component id="jButton1" alignment="1" min="-2" pref="125" max="-2" attributes="0"/>
-                                  <Component id="jButton3" min="-2" pref="125" max="-2" attributes="0"/>
+                                  <Component id="Registro" min="-2" pref="125" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jButton2" alignment="0" min="-2" pref="126" max="-2" attributes="0"/>
                           </Group>
@@ -72,7 +72,7 @@
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jButton1" min="-2" pref="52" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
-                  <Component id="jButton3" min="-2" pref="51" max="-2" attributes="0"/>
+                  <Component id="Registro" min="-2" pref="51" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
                   <Component id="jButton2" min="-2" pref="53" max="-2" attributes="0"/>
                   <EmptySpace pref="134" max="32767" attributes="0"/>
@@ -106,12 +106,12 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="Registro">
           <Properties>
             <Property name="text" type="java.lang.String" value="Registro"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RegistroActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
